# SDLPlatformer

./: CMakeLists.txt  README.md  run.sh
src/: array_list.c  array_list.h  color.c  color.h  game_object.h  game_state.c  game_state.h  level.c  level.h  main.c  main_scene.c  main_scene.h  my_math.c  my_math.h  node.c  node.h  player.c  player.h  rect_shape.c  rect_shape.h  scene.c  scene.h  sprite.c  sprite.h
